--- a/app/src/main/res/layout/act5_measure.xml
+++ b/app/src/main/res/layout/act5_measure.xml
@@ -42,27 +42,35 @@
 
     </android.support.v7.widget.CardView>
 
-    <android.support.design.widget.FloatingActionButton
+    <TextView
         android:id="@+id/btnAdd"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
+        android:text="추가"
+        android:textStyle="bold"
+        android:textSize="20dp"
         android:clickable="true"
         app:layout_constraintBottom_toBottomOf="@+id/btnRemove"
         app:layout_constraintEnd_toStartOf="@+id/btnRemove"
         app:layout_constraintTop_toTopOf="@+id/btnRemove"
-        app:srcCompat="@drawable/ic_add_black_24dp" />
+        />
 
-    <android.support.design.widget.FloatingActionButton
+    <TextView
         android:id="@+id/btnRemove"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="32dp"
-        android:layout_marginTop="16dp"
+        android:text="삭제"
+        android:textStyle="bold"
+        android:textSize="20dp"
         android:clickable="true"
+        android:layout_marginTop="16dp"
+
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/cardView"
-        app:srcCompat="@drawable/ic_remove_black_24dp" />
+
+         />
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recyclerView"
