--- a/app/src/main/res/layout/custview_sel_date_view.xml
+++ b/app/src/main/res/layout/custview_sel_date_view.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/holo_purple">
+    android:background="@color/main2">
 
     <TextView
         android:id="@+id/txtDate"
@@ -15,6 +15,7 @@
         android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
         android:text="2018.12.12"
+        android:textColor="@color/main1"
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@+id/btnPrevMonth"
