--- a/app/src/main/res/layout/act2__register.xml
+++ b/app/src/main/res/layout/act2__register.xml
@@ -8,6 +8,13 @@
     android:weightSum="1"
     android:background="@color/main1"
     tools:context=".activity.ACT2_Register">
+
+    <Button
+        android:id="@+id/logout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="로그아웃" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
