자잘한 수정 1. 가입창 로그아웃 버튼 숨기기 2. 수정버튼 창 이미지 바꾸기 클릭 3. weight, height 0이 되는 현상 수정 4. mvp 글자 보이기 5. 리커시브 아이템 글자 보이게

--- a/app/src/main/res/layout/mvp.xml
+++ b/app/src/main/res/layout/mvp.xml
@@ -34,6 +34,7 @@
         android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
         android:text="TextView"
+        android:textColor="@color/colorWhite"
         android:textSize="30sp"
         android:textStyle="bold|italic"
         app:layout_constraintBottom_toBottomOf="parent"
