--- a/app/src/main/res/layout/act2__register.xml
+++ b/app/src/main/res/layout/act2__register.xml
@@ -13,7 +13,8 @@
         android:id="@+id/logout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="로그아웃" />
+        android:text="로그아웃"
+        android:visibility="gone" />
 
     <LinearLayout
         android:layout_width="match_parent"
