--- a/app/src/main/res/layout/act2__register.xml
+++ b/app/src/main/res/layout/act2__register.xml
@@ -58,7 +58,7 @@
                 android:layout_height="0dp"
                 android:layout_weight="0.1"
                 android:gravity="center"
-                android:text="아이디"
+                android:text="이메일 주소"
                 android:textSize="15dp"
                 android:textStyle="bold" />
 
