무승부 추가

--- a/app/src/main/res/layout/subview_act6_show_versus.xml
+++ b/app/src/main/res/layout/subview_act6_show_versus.xml
@@ -210,4 +210,20 @@
         app:layout_constraintTop_toTopOf="@id/con_rival"
         app:srcCompat="@drawable/loser" />
 
+    <ImageView
+        android:id="@+id/imgDraw"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginStart="8dp"
+        android:rotation="-20"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="@+id/textView10"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/textView10"
+        app:srcCompat="@drawable/draw" />
+
 </android.support.constraint.ConstraintLayout>
