--- a/app/src/main/res/layout/subview_act8_track.xml
+++ b/app/src/main/res/layout/subview_act8_track.xml
@@ -93,4 +93,14 @@
 
     </FrameLayout>
 
+    <Button
+        android:id="@+id/btnVideo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:text="영상보기"
+        app:layout_constraintBottom_toTopOf="@+id/recyclerView"
+        app:layout_constraintEnd_toEndOf="parent" />
+
 </android.support.constraint.ConstraintLayout>
